# py-tuido

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
-D/: tasks.json
sample_data/: bindings.yaml  config.yaml  notes.md  tasks.json  topics.json
src/: main.py
src/controller/: notes_controller.py  tasks_controller.py  topics_controller.py
src/model/: config_model.py  notes_model.py  tasks_model.py  topics_model.py
src/view/: app_style.css  main_view.py  notes_tab.py  tasks_tab.py  tasks_tab_edit_screen.py  topics_tab.py
tuido/: __init__.py  __main__.py  main.py
tuido/cli/: __init__.py
tuido/domain/: errors.py  models.py
tuido/sample_data/: topics.json
tuido/services/: config_service.py  notes_service.py  tasks_service.py  topics_service.py
tuido/storage/config/: base.py  yaml.py  yaml_.py
tuido/storage/notes/: base.py  md.py
tuido/storage/tasks/: base.py  json.py
tuido/storage/topics/: base.py  json.py  json_.py
tuido/tui/: app.py  bindings.py  bindings.yaml  global.tcss
tuido/tui/screens/: main_screen.py  task_edit_screen.py  task_edit_screen.tcss
tuido/tui/screens/tabs/: notes_tab.py  notes_tab.tcss  tasks_tab.py  tasks_tab.tcss  topics_tab.py  topics_tab.tcss
