[project]
name = "tuido"
version = "0.2.0"
dependencies = [
    "textual",
    "pyyaml",
]

[project.scripts]
tuido = "tuido.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tuido"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]
