[project]
name = "tuido"
version = "0.2.0"
dependencies = [
    "textual",
    "pyyaml",
]

[project.scripts]
tuido = "tuido.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tuido"]

[tool.hatch.build.targets.wheel.force-include]
"tuido/sample_data/config.yaml"  = "tuido/sample_data/config.yaml"
"tuido/sample_data/tasks.json"   = "tuido/sample_data/tasks.json"
"tuido/sample_data/topics.json"  = "tuido/sample_data/topics.json"
"tuido/sample_data/notes.md"     = "tuido/sample_data/notes.md"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]
