[project]
name = "tuido"
version = "0.1.0"
authors = [
    { name = "Corvin Gröning" }
]
description = "A terminal-based tasks and personal information manager."
keywords = ["terminal", "tasks", "personal information manager", "TUI"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]
dependencies = [
    "textual",
    "pyyaml",
    "typer",
]

[project.urls]
Homepage = "https://github.com/cgroening/py-tuido"
Repository = "https://github.com/cgroening/py-tuido"
Changelog = "https://github.com/cgroening/py-tuido/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "coverage>=7.13.4"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/*.pyc",
    ".venv",
    "venv",
    "**/node_modules",
]
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportCallInDefaultInitializer = "none"
reportImplicitOverride = "none"
reportMissingTypeStubs = "none"
reportImplicitStringConcatenation = "none"

[project.scripts]
tuido = "tuido.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tuido"]

[tool.hatch.build.targets.wheel.force-include]
"sample_data/config.yaml"  = "sample_data/config.yaml"
"sample_data/tasks.json"   = "sample_data/tasks.json"
"sample_data/topics.json"  = "sample_data/topics.json"
"sample_data/notes.md"     = "sample_data/notes.md"

[tool.pytest.ini_options]
testpaths = ["tuido/tests"]
